--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cotd",
   "version": "0.0.3",
   "private": true,
-  "homepage": "https://AnushreeSrivastava.github.io/fish-store-app",
+  "homepage": "https://AnushreeSrivastava.github.io/fish-store-app/",
   "devDependencies": {
     "concurrently": "4.1.0",
     "react-scripts": "3.4.1"
@@ -27,9 +27,7 @@
     "eject": "react-scripts eject",
     "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
     "now-build": "npm run build && mv build dist",
-    "styles:watch": "npm run styles -- -w",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "styles:watch": "npm run styles -- -w"
   },
   "browserslist": [
     ">0.2%",
